delete data and update testdata

--- a/nb/primer3-test.ipynb
+++ b/nb/primer3-test.ipynb
@@ -4,40 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load a mutation file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-05T21:22:45.535273Z",
-     "start_time": "2020-05-05T21:22:45.525036Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ls ../testdata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = pd.read_csv('../testdata/mutations.csv', sep='\\t')"
+    "# Run test file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### import run_primer3 and set the static folder\n",
-    "+ if static folder has different structure, just point directly to the folder containing your split genomic fasta files\n",
-    "+ PCR_config can be adjusted to requirements\n",
-    "+ primer3_config has many parameters (for details see here https://htmlpreview.github.io/?https://github.com/libnano/primer3-py/master/primer3/src/libprimer3/primer3_manual.htm)"
+    "### Load a mutation file\n",
+    "+ input is df with columns 'Chr', 'Start', 'End', 'Ref', 'Alt' with optional id columns (everything left of Chr)\n",
+    "+ output is id columns + 'Chr', 'Start', 'End', 'Ref', 'Alt' + primer cols"
    ]
   },
   {
@@ -46,13 +22,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from p3 import run_primer3\n",
+    "test_df = pd.read_excel('../testdata/mutations.xlsx', engine=\"openpyxl\", sheet_name=\"mutations\")\n",
+    "# test_df = pd.read_csv('../testdata/mutations.csv', sep='\\t')\n",
+    "test_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### import run_primer3 and set the split-genome folder\n",
+    "+ download for hg38 [here (from my Dropbox)](https://www.dropbox.com/sh/swvbzgp8uslmh9p/AADZofWT1kf6NJSQS-dxye44a?dl=0) and set the path to split_genome_path as chroms_folder argument to function\n",
+    "+ PCR_config can be adjusted to specific requirements (see below) but defaults are tested to work in most cases\n",
+    "+ primer3_config has many parameters (for details see [here](https://htmlpreview.github.io/?https://github.com/libnano/primer3-py/master/primer3/src/libprimer3/primer3_manual.htm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some sensible settings for better output\n",
+    "from IPython.display import display\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "pd.set_option('max_colwidth', 200)\n",
     "\n",
-    "static_path = '../static'\n",
+    "# get the code from my package\n",
+    "import sys\n",
+    "sys.path.append('../code')\n",
+    "from script_utils import show_output\n",
+    "from p3_run import run_primer3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the targeted product size and play around with the configs\n",
     "\n",
     "PCR_config = {\n",
     "    'seq_len': 500,\n",
-    "    'mut_pad': 5,\n",
+    "    'center_offSet': 5,\n",
     "    'prod_size_min': 120,\n",
     "    'prod_size_max': 220\n",
     "}\n",
@@ -94,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### run the primer3 process"
+    "## run primer3"
    ]
   },
   {
@@ -108,19 +123,47 @@
    },
    "outputs": [],
    "source": [
-    "test_p3 = run_primer3(\n",
+    "genome_split_folder = \"/Users/martinszyska/Dropbox/Icke/Work/static/genome/gatk/hg38/split\"\n",
+    "\n",
+    "test_primers = run_primer3(\n",
     "    test_df,\n",
-    "    chroms_folder=f\"{static_path}/genome/gatk/hg38/split\", # path to split chrome folder\n",
+    "    chroms_folder=genome_split_folder, # path to split chrome folder\n",
     "    pcr_config=PCR_config,\n",
     "    primer3_config=primer3_config,\n",
-    ")\n",
-    "test_p3"
+    "    threads=8         # multicore processing computes different chromosomes in parallel\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_primers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### write result to excel file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter(\"../testdata/mutations.xlsx\", mode=\"a\", engine=\"openpyxl\") as writer:\n",
+    "     test_primers.to_excel(writer, sheet_name=\"primers\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -134,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
