add primerDB search

--- a/nb/primer3-test.ipynb
+++ b/nb/primer3-test.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "test_df = pd.read_excel('../testdata/mutations.xlsx', engine=\"openpyxl\", sheet_name=\"mutations\")\n",
     "# test_df = pd.read_csv('../testdata/mutations.csv', sep='\\t')\n",
-    "test_df"
+    "test_df[:5]"
    ]
   },
   {
@@ -54,7 +54,8 @@
     "import sys\n",
     "sys.path.append('../code')\n",
     "from script_utils import show_output\n",
-    "from p3_run import run_primer3"
+    "from p3_run import run_primer3\n",
+    "from primer_DB import check_primerDB"
    ]
   },
   {
@@ -140,7 +141,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_primers"
+    "test_primers[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check primers against primer \"database\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primers_with_hits_df, results_df = check_primerDB(\n",
+    "    test_primers,               # mutation_df (can also be the output from run_primer3 for chaining the operations: check_primerDB(run_primer3(...), ))\n",
+    "    primer_DB=\"../testdata/test_primer_DB.xlsx\",  # the excel_file containing the existing mutations (fields )\n",
+    "    padding=25  # padding defines minimum distance of mutation from primer 3-prime sites\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primers_with_hits_df.query(\"DBhits > 0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df"
    ]
   },
   {
@@ -156,8 +195,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(\"../testdata/mutations.xlsx\", mode=\"a\", engine=\"openpyxl\") as writer:\n",
-    "     test_primers.to_excel(writer, sheet_name=\"primers\")"
+    "with pd.ExcelWriter(\"../testdata/primer_results.xlsx\", mode=\"w\", engine=\"openpyxl\") as writer:\n",
+    "    test_df.to_excel(writer, sheet_name=\"mutations\", index=False)\n",
+    "    primers_with_hits_df.to_excel(writer, sheet_name=\"primers\", index=False)\n",
+    "    results_df.to_excel(writer, sheet_name=\"DBhits\", index=False)"
    ]
   }
  ],
